admin panel buttons added for it statistics, it editing, teacher statistics, teacher editing, student statistics, student editing, with ui fixations (aligning buttons horizontaly and vertically into three groups)

--- a/static/admin_dashboard.css
+++ b/static/admin_dashboard.css
@@ -14,14 +14,7 @@ h1 {
     margin-bottom: 2rem;
 }
 
-form {
-    display: block;
-    margin-bottom: 20px;
 
-    margin: 0 auto 20px auto;
-
-    width: 500px;
-}
 
 
 button {
@@ -34,4 +27,23 @@ button {
     height: 50px;
     border-radius: 240%;
     background-color: pink;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.group {
+
+    flex-basis: calc(100% / 3);
+    /* This is three because of Student, Teacher, 
+                                and IT_Staff grouping, since the grouping is 3 groups,
+                                 If more groups added, increment the 3 by the added group 
+                                 numbers*/
+}
+
+form {
+    margin-bottom: 10px;
 }
